fixing show accordion to collapse content ☀☀

--- a/css/styles_market.css
+++ b/css/styles_market.css
@@ -6,10 +6,6 @@ a {
     text-decoration: none;
 }
 
-.display-none {
-    display: none;
-}
-
 /* heading section */
 
 .navbar {
